Read profiles configuration from a json file